[project]
name = "neo4j-graphrag-studio"
version = "0.1.0"
description = "Interactive Streamlit UI for neo4j-graphrag: dynamic schema inference, GraphRAG Q&A, subgraph visualization, and Cypher verification."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "neo4j-graphrag[openai]>=1.18.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.1",
    "streamlit-agraph>=0.0.45",
]
